--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 80px;
-  overflow-x: hidden;
-  max-width: 100vw;
+    scroll-behavior: smooth;
+    scroll-padding-top: 80px;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 #home-point {
@@ -22,25 +22,24 @@ html {
 }
 
 :root {
-  --bg: #0c0b0a;
-  --bg-pattern: radial-gradient(#585757 1px, transparent 1px);
-  --text: #f5f5f5;
-  --accent: gold;
+    --bg: #0c0b0a;
+    --bg-pattern: radial-gradient(#585757 1px, transparent 1px);
+    --text: #f5f5f5;
+    --accent: gold;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  width: 100%;
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: var(--bg);
-  background-image: var(--bg-pattern);
-  background-size: 27px 27px;
-  color: var(--text);
-  transition: background 0.3s, color 0.3s;
-  
+    margin: 0;
+    padding: 0;
+    height: 100dvh;
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    background-color: var(--bg);
+    background-image: var(--bg-pattern);
+    background-size: 27px 27px;
+    color: var(--text);
+    transition: background 0.3s, color 0.3s;
 }
 
 body.light-mode {
@@ -440,6 +439,7 @@ body.light-mode .hamburger.active span {
     height: 100vh;
     width: max-content;
     max-width: 100%;
+    margin-right: 100px;
     
     padding: 40px 60px;
     border-radius: 12px;
