--- a/style.css
+++ b/style.css
@@ -39,7 +39,14 @@ body {
     background-image: var(--bg-pattern);
     background-size: 27px 27px;
     color: var(--text);
-    transition: background 0.3s, color 0.3s;
+    opacity: 0;
+    transform: translateY(12px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+body.loaded {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 body.light-mode {
@@ -80,6 +87,24 @@ body.light-mode::-webkit-scrollbar-thumb {
 
 body.light-mode::-webkit-scrollbar-thumb:hover {
   background-color: #000000;
+}
+
+.reveal {
+    opacity: 0;
+    transform: translateY(40px);
+    filter: blur(6px);
+    transition:
+        opacity 0.8s ease,
+        transform 0.8s ease,
+        filter 0.8s ease;
+    will-change: transform, opacity;
+}
+
+/* When visible */
+.reveal.visible {
+    opacity: 1;
+    transform: translateY(0);
+    filter: blur(0);
 }
 
 nav {
